# gerrit-statistics

./: .gitignore  LICENSE  README.md  pyproject.toml
gerritstats/: __init__.py  base.py  desing.py  requirements.txt
gerritstats/project/: base.py
gerritstats/projects/: __init__.py  projects.py
gerritstats/src/: __init__.py  project.py  project.py~
tests/: __main__.py
